[gd_scene load_steps=4 format=3 uid="uid://jycf3nsu22ex"]

[ext_resource type="Script" uid="uid://ci18it8jvjqn5" path="res://Scripts/PC/PCMain.gd" id="1_7871k"]
[ext_resource type="PackedScene" uid="uid://decxv6kixq4lb" path="res://Scenes/chat_manager.tscn" id="2_qmq0u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cg6dt"]
bg_color = Color(0, 0, 0, 1)

[node name="PCMain" type="Node2D"]
script = ExtResource("1_7871k")

[node name="Host" type="Button" parent="."]
offset_left = 576.0
offset_top = 256.0
offset_right = 832.0
offset_bottom = 512.0
text = "Host"

[node name="Init" type="Button" parent="."]
offset_left = 896.0
offset_top = 256.0
offset_right = 1152.0
offset_bottom = 512.0
text = "Initialize Clients"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_right = 1918.0
offset_bottom = 192.0
theme_override_styles/normal = SubResource("StyleBoxFlat_cg6dt")
fit_content = true
scroll_following = true
vertical_alignment = 2

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChatManager" parent="HUD" instance=ExtResource("2_qmq0u")]
layout_mode = 1
offset_left = 64.0
offset_top = 256.0
offset_right = 448.0
offset_bottom = 576.0

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Init" to="." method="_on_init_pressed"]
